package baumaschinen;

public abstract class Transportgeraet extends Baumaschine{

    // Konstruktor
    public Transportgeraet(int motorleistung) {
        super(motorleistung);
    }


}
