@startuml

title __BAUMASCHINEN's Class Diagram__\n

  namespace baumaschinen {
    abstract class baumaschinen.Bagger {
        - anzahlGrabwerkzeuge : int
        + Bagger()
        + getAnzahlGrabwerkzeuge()
        + setAnzahlGrabwerkzeuge()
    }
  }
  

  namespace baumaschinen {
    abstract class baumaschinen.Baumaschine {
        # motorleistung : int
        + Baumaschine()
        + getMotorleistung()
        + setMotorleistung()
    }
  }
  

  namespace baumaschinen {
    interface baumaschinen.Fahrbar {
        {abstract} + getMaxGeschwindigkeit()
    }
  }
  

  namespace baumaschinen {
    class baumaschinen.Foerderband {
        - bandbreite : float
        + Foerderband()
        + getBandbreite()
        + setBandbreite()
    }
  }
  

  namespace baumaschinen {
    class baumaschinen.Kipplaster {
        - winkel : float
        + Kipplaster()
        + getMaxGeschwindigkeit()
        + getWinkel()
        + setWinkel()
    }
  }
  

  namespace baumaschinen {
    class baumaschinen.SchaufelradBagger {
        - durchmesserSchaufelrad : float
        + SchaufelradBagger()
        + getDurchmesserSchaufelrad()
        + getMaxGeschwindigkeit()
        + setDurchmesserSchaufelrad()
    }
  }
  

  namespace baumaschinen {
    class baumaschinen.SeilBagger {
        - seillaenge : float
        + SeilBagger()
        + getMaxGeschwindigkeit()
        + getSeillaenge()
        + setSeillaenge()
    }
  }
  

  namespace baumaschinen {
    abstract class baumaschinen.Transportgeraet {
        + Transportgeraet()
    }
  }
  

  baumaschinen.Bagger -up-|> baumaschinen.Baumaschine
  baumaschinen.Foerderband -up-|> baumaschinen.Transportgeraet
  baumaschinen.Kipplaster .up.|> baumaschinen.Fahrbar
  baumaschinen.Kipplaster -up-|> baumaschinen.Transportgeraet
  baumaschinen.SchaufelradBagger .up.|> baumaschinen.Fahrbar
  baumaschinen.SchaufelradBagger -up-|> baumaschinen.Bagger
  baumaschinen.SeilBagger .up.|> baumaschinen.Fahrbar
  baumaschinen.SeilBagger -up-|> baumaschinen.Bagger
  baumaschinen.Transportgeraet -up-|> baumaschinen.Baumaschine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
